# descriptor_lib

./: .gitignore  CMakeLists.txt  Descriptor.cpp  README.md  make.sh  regenerate.sh  show.sh
clustering/: CMakeLists.txt
clustering/include/: Clustering.hpp  ClusteringUtils.hpp  KMeans.hpp  KMedoids.hpp
clustering/src/: Clustering.cpp  KMeans.cpp  KMedoids.cpp
config/: config  config.yaml
descriptor/: CMakeLists.txt
descriptor/include/: Band.hpp  Calculator.hpp  DCH.hpp  DescriptorXX.hpp  Extractor.hpp  FPFH.hpp  Hist.hpp  PFH.hpp  Params.hpp  ROPS.hpp  SHOT.hpp  SpinImage.hpp  USC.hpp
descriptor/src/: Calculator.cpp  DCH.cpp  Extractor.cpp  FPFH.cpp  Hist.cpp  PFH.cpp  ROPS.cpp  SHOT.cpp  SpinImage.cpp  USC.cpp
factories/: CMakeLists.txt
factories/include/: CloudFactory.hpp  DescriptorFactory.hpp  MetricFactory.hpp  PointFactory.hpp
factories/src/: CloudFactory.cpp  PointFactory.cpp
io/: CMakeLists.txt
io/include/: Loader.hpp  Writer.hpp
io/src/: Loader.cpp  Writer.cpp
metrics/: CMakeLists.txt
metrics/include/: ClosestPermutationMetric.hpp  ClosestPermutationWithConfidenceMetric.hpp  EuclideanMetric.hpp  Metric.hpp  MetricFactory.hpp
metrics/src/: ClosestPermutationMetric.cpp  ClosestPermutationWithConfidenceMetric.cpp  Metric.cpp
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  ClosestPermutation.cpp  ClosestPermutation.h  CloudFactory.cpp  CloudFactory.h  Config.cpp  Config.h  Descriptor.cpp  ExecutionParams.cpp  ExecutionParams.h  Extractor.cpp  Extractor.h  Factory.cpp  Factory.h  Helper.cpp  Helper.h  Hist.cpp  Hist.h  KMeans.cpp  KMeans.h  Metric.h  Parser.cpp  Parser.h  PointFactory.h  Test.cpp  Test.h  Writer.cpp  Writer.h  main.cpp
src/clustering/: CMakeLists.txt  ClosestPermutation.cpp  ClosestPermutation.h  ClosestPermutationMetric.cpp  ClosestPermutationMetric.h  ClosestPermutationMetric.hpp  Clustering.cpp  Clustering.hpp  ClusteringUtils.cpp  ClusteringUtils.hpp  EuclideanMetric.h  EuclideanMetric.hpp  Helper.cpp  Helper.h  Hierarchical.cpp  Hierarchical.hpp  KMeans.cpp  KMeans.h  KMeans.hpp  Metric.h  Metric.hpp  MetricFactory.h  MetricFactory.hpp
src/clustering/include/: Clustering.hpp
src/clustering/src/: KMeans.cpp
src/descriptor/: Band.h  Band.hpp  CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.hpp  Extractor.cpp  Extractor.h  Extractor.hpp  Hist.cpp  Hist.hpp
src/descriptor/include/: Extractor.hpp
src/descriptor/src/: Extractor.cpp
src/factories/: CMakeLists.txt  CloudFactory.cpp  CloudFactory.h  CloudFactory.hpp  MetricFactory.h  PointFactory.cpp  PointFactory.h  PointFactory.hpp
src/factories/include/: PointFactory.hpp
src/factories/src/: CloudFactory.cpp  PointFactory.cpp
src/io/: CMakeLists.txt  Loader.cpp  Loader.h  Loader.hpp  Writer.cpp  Writer.h  Writer.hpp
src/io/include/: Loader.hpp  Writer.hpp
src/io/src/: Loader.cpp  Writer.cpp
src/metrics/: CMakeLists.txt  Metric.cpp
src/metrics/include/: EuclideanMetric.hpp  Metric.hpp  MetricFactory.hpp
src/test/: LibClusteringTest.cpp  LibDescriptorTest.cpp  LibUtilsTest.cpp  TestMain.cpp  UtilsTest.cpp
src/utils/: CMakeLists.txt  CloudUtils.cpp  CloudUtils.hpp  Config.cpp  Config.h  Config.hpp  ExecutionParams.cpp  ExecutionParams.h  ExecutionParams.hpp  ExtractData.h  Helper.cpp  Helper.h  Utils.cpp  Utils.hpp
src/utils/include/: Config.hpp  ExecutionParams.hpp
src/utils/src/: ExecutionParams.cpp
test/: LibClusteringTest.cpp  LibDescriptorTest.cpp  LibFactoriesTest.cpp  LibMetricsTest.cpp  LibUtilsTest.cpp
utils/: CMakeLists.txt
utils/include/: CloudUtils.hpp  Config.hpp  DescriptorParams.hpp  ExecutionParams.hpp  Histogram.hpp  Utils.hpp
utils/include/plog/Formatters/: TxtFormatter.h
utils/src/: CloudUtils.cpp  Config.cpp  DescriptorParams.cpp  ExecutionParams.cpp  Histogram.cpp  Utils.cpp
